--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul>
                         <li> <a href="../index.html">עמוד הבית </a></li>
-                        <li> <a href="../employment.html"> ניסיון תעסוקתי</a></li>
+                        <li> <a href="employment.html"> ניסיון תעסוקתי</a></li>
                         <li> <a href="../army.html">שירות צבאי</a></li>
                         <li> <a href="../education.html"> השכלה</a></li>
                     </ul>
