--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -24,10 +24,10 @@
             <div id="navigation">
                 <nav>
                     <ul>
-                        <li> <a href="../index.html">עמוד הבית </a></li>
+                        <li> <a href="/MyProfile/index.html">עמוד הבית </a></li>
                         <li> <a href="/MyProfile/employment.html"> ניסיון תעסוקתי</a></li>
-                        <li> <a href="../army.html">שירות צבאי</a></li>
-                        <li> <a href="../education.html"> השכלה</a></li>
+                        <li> <a href="/MyProfile/army.html">שירות צבאי</a></li>
+                        <li> <a href="/MyProfile/education.html"> השכלה</a></li>
                     </ul>
                 </nav>
             </div>
