--- a/MyProfile/education.html
+++ b/MyProfile/education.html
@@ -23,10 +23,10 @@
 
             <nav>
                 <ul>
-                    <li> <a href="../index.html"> עמוד הבית</a></li>
-                    <li> <a href="../employment.html"> ניסיון תעסוקתי</a></li>
-                    <li> <a href="../army.html">שירות צבאי </a></li>
-                    <li> <a href="../education.html"> השכלה</a></li>
+                    <li> <a href="/index.html"> עמוד הבית</a></li>
+                    <li> <a href="/employment.html"> ניסיון תעסוקתי</a></li>
+                    <li> <a href="/army.html">שירות צבאי </a></li>
+                    <li> <a href="/education.html"> השכלה</a></li>
                 </ul>
             </nav>
             </div>
