--- a/MyProfile/education.html
+++ b/MyProfile/education.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
     <meta charset="utf-8" />
-    <title>שיר מסד - עמוד הפרופיל</title>
+    <title>שיר מסד- השכלה</title>
     <meta name="description" content="אתר הפרופיל של שיר מסד" />
     <meta name="keywords" content="שיר מסד, קורות חיים, אתר בית" />
     <meta name="author" content="" />
